Use RAID as background for upload
Resolves #57

--- a/resources/sass/components/_backgrounds.scss
+++ b/resources/sass/components/_backgrounds.scss
@@ -27,6 +27,10 @@
   background-image: url('../images/backgrounds/couch.jpg');
 }
 
+.bg-raid {
+  background-image: url('../images/backgrounds/raid.jpg');
+}
+
 .bg-suite {
   background-image: url('../images/backgrounds/suite.jpg');
 }
