--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -1,4 +1,4 @@
-<section id="upload" class="section upload bg bg-texture">
+<section id="upload" class="section upload bg bg-raid">
   <div class="container mx-auto">
     <h2 class="mb-4">Upload</h2>
 
