Replace couch with panel

--- a/resources/sass/components/_backgrounds.scss
+++ b/resources/sass/components/_backgrounds.scss
@@ -27,6 +27,10 @@
   background-image: url('../images/backgrounds/couch.jpg');
 }
 
+.bg-panel {
+  background-image: url('../images/backgrounds/panel.jpg');
+}
+
 .bg-raid {
   background-image: url('../images/backgrounds/raid.jpg');
 }
