--- a/site/index.njk
+++ b/site/index.njk
@@ -9,7 +9,7 @@ meta_description: Boutique post-production in Ponsonby, Auckland
 {% include "components/portfolio.njk" %}
 {% include "components/suite.njk" %}
 {% include "components/about.njk" %}
-{% include "components/couch.njk" %}
+{% include "components/panel.njk" %}
 {% include "components/services.njk" %}
 {% include "components/upload.njk" %}
 {% include "components/contact.njk" %}
