--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -3,9 +3,9 @@
 
     <h2>Services</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
 
-      <div>
+      <div class="card">
         <h4>Motion picture finishing</h4>
         <ul>
           <li>Colour grading</li>
@@ -19,7 +19,9 @@
           <li>Subjective Broadcast QC checks</li>
           <li>LTO8 data backup</li>
         </ul>
+      </div>
 
+      <div class="card">
         <h4>International services</h4>
         <ul>
           <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
@@ -28,15 +30,9 @@
           <li>Rushes and DIT</li>
           <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
         </ul>
-
-        <h4>Offline</h4>
-        <ul>
-          <li>Editing TV spots</li>
-          <li>Trailer production</li>
-        </ul>
       </div>
 
-      <div>
+      <div class="card">
         <h4>Dry hire</h4>
         <ul>
           <li>Client facing suite available for short and long term dry hire</li>
@@ -51,13 +47,27 @@
           <li>LTO8 deck</li>
           <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
         </ul>
+      </div>
 
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+
+      <div class="card">
         <h4>Client services</h4>
         <ul>
           <li>High speed 1300 Mbps WiFi</li>
           <li>Fibre optic internet connection</li>
           <li>Fully stocked bar fridge</li>
           <li>Food, drink, and concierge services available on request</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h4>Offline</h4>
+        <ul>
+          <li>Editing TV spots</li>
+          <li>Trailer production</li>
         </ul>
       </div>
 
