--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,6 +1,8 @@
 //==========  Import all component partials ==========//
 
+@import 'about';
 @import 'backgrounds';
+@import 'card';
 @import 'carousel';
 @import 'contact';
 @import 'header';
