--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -3,11 +3,11 @@
   <div class="container mx-auto">
 
     <h2>About</h2>
-    <p class="text-lg text-center">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
+    <p class="text-lg text-center mb-8">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
 
-      <div>
+      <div class="card">
         <p>A downside of technology becoming so accessible has been many in the new generation of post-production operators who don't fully understand the craft, what they're doing or why they’re doing it. They may be able to get your work through a tech check, but are they making it the best it can be, or letting down your project at the final hurdle?</p>
         <p>At The Finishing Suite, you have the best of both worlds — the low overheads and flexibility of a modern boutique shop, driven by a finishing expert with 15 years of experience working in high-end facilities.</p>
         <p>I’ve delivered hundreds of hours of finished material for distribution all over the world, transitioned from SD to HD and tape to digital, and had a hand in pioneering new workflows for bleeding-edge formats as they emerged over the years. I know how technology has evolved, and have a strong grip on where it's going tomorrow.</p>
@@ -17,7 +17,7 @@
         <p>The Finishing Suite is conveniently located right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
       </div>
 
-      <div>
+      <div class="card">
         {%- for person in collections.people | reverse -%}
           <a class="text-center" href="{{person.data.url}}" target="_blank">
             <img class="mx-auto rounded-full w-1/2 md:w-2/5" src="{{person.data.image}}" alt="{{person.data.name}}">
