Tweak portfolio image sizes
Resolves #59

--- a/resources/sass/components/_carousel.scss
+++ b/resources/sass/components/_carousel.scss
@@ -6,7 +6,8 @@
 
 .carousel-inner {
   position: relative;
-  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
 }
 
@@ -22,7 +23,9 @@
   transition: transform .25s ease-in-out;
 
   > img {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 75vh;
   }
 
   &.active {
@@ -37,17 +40,11 @@
     }
   }
 
-  .aspect-ratio {
-    padding-bottom: 56.25%;
-  }
-
   > iframe {
-    @apply absolute;
-    @apply left-0;
-    @apply top-0;
-    @apply w-full;
-    @apply h-full;
-    @apply object-cover;
+    aspect-ratio: 16 / 9;
+    margin-left: auto;
+    margin-right: auto;
+    height: 75vh;
   }
 }
 
