--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -21,15 +21,27 @@
         </ul>
       </div>
 
-      <div class="card">
-        <h4>International services</h4>
-        <ul>
-          <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
-          <li>Remote colour grading</li>
-          <li>High Speed fibre optic data transfers</li>
-          <li>Rushes and DIT</li>
-          <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
-        </ul>
+      <div>
+        <div class="card">
+          <h4>Client services</h4>
+          <ul>
+            <li>High speed 1300 Mbps WiFi</li>
+            <li>Fibre optic internet connection</li>
+            <li>Fully stocked bar fridge</li>
+            <li>Food, drink, and concierge services available on request</li>
+          </ul>
+        </div>
+
+        <div class="card mt-16 md:mt-8">
+          <h4>International services</h4>
+          <ul>
+            <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
+            <li>Remote colour grading</li>
+            <li>High Speed fibre optic data transfers</li>
+            <li>Rushes and DIT</li>
+            <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
+          </ul>
+        </div>
       </div>
 
       <div class="card">
@@ -46,28 +58,6 @@
           <li>6TB direct attached SSD Raid for blistering fast cache</li>
           <li>LTO8 deck</li>
           <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
-        </ul>
-      </div>
-
-    </div>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
-
-      <div class="card">
-        <h4>Client services</h4>
-        <ul>
-          <li>High speed 1300 Mbps WiFi</li>
-          <li>Fibre optic internet connection</li>
-          <li>Fully stocked bar fridge</li>
-          <li>Food, drink, and concierge services available on request</li>
-        </ul>
-      </div>
-
-      <div class="card">
-        <h4>Offline</h4>
-        <ul>
-          <li>Editing TV spots</li>
-          <li>Trailer production</li>
         </ul>
       </div>
 
