Fix portfolio scroll position
Fixes #63

--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,4 +1,5 @@
-<section id="portfolio" class="section portfolio bg bg-texture">
+<section class="section portfolio bg bg-texture">
+  <div id="portfolio" class="anchor"></div>
   <div class="container mx-auto">
     <h2 class="pt-0">Portfolio</h2>
 
