Tidy up alignments

--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,4 +1,4 @@
-<section id="contact" class="contact bg bg-texture">
+<section id="contact" class="section contact bg bg-texture">
   <div class="container mx-auto">
     <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
