--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -5,7 +5,7 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
 
-      <div class="card">
+      <div class="">
         <h4>Motion picture finishing</h4>
         <ul>
           <li>Colour grading</li>
@@ -22,7 +22,7 @@
       </div>
 
       <div>
-        <div class="card">
+        <div class="">
           <h4>Client services</h4>
           <ul>
             <li>High speed 1300 Mbps WiFi</li>
@@ -32,7 +32,7 @@
           </ul>
         </div>
 
-        <div class="card mt-16 md:mt-8">
+        <div class="mt-16 md:mt-8">
           <h4>International services</h4>
           <ul>
             <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="">
         <h4>Dry hire</h4>
         <ul>
           <li>Client facing suite available for short and long term dry hire</li>
