Fix portfolio video size

--- a/resources/sass/components/_carousel.scss
+++ b/resources/sass/components/_carousel.scss
@@ -41,10 +41,13 @@
   }
 
   > iframe {
+    min-width: 100vw;
     aspect-ratio: 16 / 9;
-    margin-left: auto;
-    margin-right: auto;
-    height: 75vh;
+
+    @screen lg {
+      min-width: 0;
+      height: 75vh;
+    }
   }
 }
 
