--- a/resources/sass/components/_about.scss
+++ b/resources/sass/components/_about.scss
@@ -12,4 +12,16 @@
 
     background-color: rgba(255,255,255,.5);
   }
+
+  .person-image {
+    @apply mb-8;
+
+    order: -1;
+
+    @screen md {
+      @apply mb-0;
+
+      order: initial;
+    }
+  }
 }
