--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -23,8 +23,8 @@
     <div class="divider"></div>
 
     {%- for person in collections.people | reverse -%}
-      <div class="grid grid-cols-1 md:grid-cols-2 md:gap-16">
-        <div class="">
+      <div class="person grid grid-cols-1 md:grid-cols-2 md:gap-16">
+        <div class="person-text">
           <h3>
             {{person.data.name}}
             <small class="block">{{person.data.title}}</small>
@@ -33,7 +33,7 @@
           {{ person.templateContent | safe }}
         </div>
 
-        <div class="flex justify-center items-center">
+        <div class="person-image flex justify-center items-center">
           <div>
             <img src="{{person.data.image}}" alt="{{person.data.name}}">
           </div>
