--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -5,7 +5,7 @@
       <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
     </button>
 
-    <div class="portfolio-images">
+    <div id="portfolioImages" class="portfolio-images">
       {%- for project in collections.portfolio | reverse -%}
 
         <div class="slide carousel" id="portfolioCarousel{{loop.index}}">
