Stop videos playing if changing slide
Fixes #72

--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -22,6 +22,7 @@
   {% include "components/social-meta.njk" %}
   {% include "components/icons.njk" %}
 
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js" integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
   {% if helpers.environment === "development" %}
     <script src="js/main.js" defer></script>
