--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -21,7 +21,7 @@
 
             {%- for video in project.data.videos -%}
               <div class="carousel-item">
-                <iframe src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="video{{carouselNo}}_{{ loop.index }}" src="{{ video }}&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             {%- endfor -%}
           </div>
