--- a/site/includes/layouts/help/article.njk
+++ b/site/includes/layouts/help/article.njk
@@ -2,6 +2,10 @@
 layout: layouts/help/base.njk
 ---
 
+<h1>I am layouts/help/article.njk</h1>
+
+<a href="/help/">Back to help index</a>
+
 <h2>{{ title }}</h2>
 
 {{ content | safe }}
