--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -32,7 +32,8 @@
 </head>
 
 <body class="bg-black text-white">
-  <h1>I am the help content</h1>
+  <h1>I am layouts/help/base.njk</h1>
+
   {{ content | safe }}
 </body>
 
