--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -6,6 +6,7 @@
 @import 'carousel';
 @import 'contact';
 @import 'header';
+@import 'help';
 @import 'lazyload';
 @import 'nav';
 @import 'portfolio';
