--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -22,6 +22,6 @@
       Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021
     </p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </section>
