--- a/site/includes/components/navbar.njk
+++ b/site/includes/components/navbar.njk
@@ -3,7 +3,7 @@
     <i class="fas fa-bars"></i>
   </div>
 
-  <div id="nav">
+  <div id="nav" class="nav-items">
     <a href="#portfolio">Portfolio</a>
     <a href="#services">Services</a>
     <a href="#about">About</a>
