--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -1,7 +1,17 @@
 ---
 layout: layouts/default.njk
+bodyClass: help bg bg-texture
 ---
 
-<h1>I am layouts/help/base.njk</h1>
+<nav class="section py-0 bg-black">
+  <div class="container mx-auto flex items-center gap-x-4">
+    <a href="/"><img class="h-12" src="images/logo/tfs-white.svg" alt="The Finishing Suite" /></a>
+    <a href="/help/" class="text-2xl">Help Center</a>
+  </div>
+</nav>
 
-{{ content | safe }}
+<section class="section py-0">
+  <div class="container mx-auto">
+    {{ content | safe }}
+  </div>
+</section>
