--- a/site/includes/layouts/help/article.njk
+++ b/site/includes/layouts/help/article.njk
@@ -5,7 +5,7 @@ layout: layouts/help/base.njk
 <ul class="flex text-sm">
   <li><a href="/">The Finishing Suite</a>&nbsp;&gt;&nbsp;</li>
   <li><a href="/help">Help</a>&nbsp;&gt;&nbsp;</li>
-  <li><a href="/help/#topic">Topic</a>&nbsp;&gt;&nbsp;</li>
+  <li><a href="/help/#{{topic|slugify}}">{{topic}}</a>&nbsp;&gt;&nbsp;</li>
   <li><a href="">{{title}}</a></li>
 </ul>
 
