--- a/site/includes/layouts/help/article.njk
+++ b/site/includes/layouts/help/article.njk
@@ -9,7 +9,7 @@ layout: layouts/help/base.njk
   <li><a href="">{{title}}</a></li>
 </ul>
 
-<h2>{{ title }}</h2>
+<h2 class="my-16">{{ title }}</h2>
 
 <div class="md:flex">
 
