--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,8 @@
 //==========  Variables ==========//
 
+$white: #e6e6dc;
+$red: #cf2525;
+
 $z-index-nav:                       50;
 $z-index-portfolio-backdrop:        60;
 $z-index-portfolio:                 61;
