--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -31,7 +31,7 @@
   {% endif %}
 </head>
 
-<body class="bg-black text-white {{bodyClass}}">
+<body class="{{bodyClass}}">
   {{ content | safe }}
 </body>
 
