--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -1,12 +1,13 @@
 ---
 layout: layouts/default.njk
-bodyClass: help bg bg-texture
+bodyClass: help
 ---
 
 <nav class="section py-0 bg-black">
   <div class="container mx-auto flex items-center gap-x-4">
     <a href="/"><img class="h-12" src="images/logo/tfs-white.svg" alt="The Finishing Suite" /></a>
-    <a href="/help/" class="text-2xl">Help Center</a>
+    <a href="/help/">Help Center</a>
+    <a href="/help/#contact" class="contact">Contact Us</a>
   </div>
 </nav>
 
