--- a/site/index.njk
+++ b/site/index.njk
@@ -2,6 +2,7 @@
 layout: default
 title: Boutique post-production in Ponsonby, Auckland
 meta_description: Boutique post-production in Ponsonby, Auckland
+bodyClass: bg-black text-white
 ---
 
 {% include "components/header.njk" %}
