--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -3,7 +3,7 @@ layout: layouts/default.njk
 bodyClass: help
 ---
 
-<nav class="section py-0 bg-black">
+<nav class="section navbar py-0 bg-black">
   <div class="container mx-auto flex items-center gap-x-4">
     <a href="/"><img class="h-12" src="images/logo/tfs-white.svg" alt="The Finishing Suite" /></a>
     <a href="/help/">Help Center</a>
