--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,6 +1,6 @@
 <section id="contact" class="section contact bg bg-texture">
   <div class="container mx-auto">
-    <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
+    <img class="logo" src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
     <div class="contact-links">
       <a href='m&#97;ilt&#111;&#58;&#37;6&#49;la&#115;%&#55;4a%69r&#64;t&#104;ef%69nis&#104;in&#103;su&#105;&#37;&#55;4&#37;&#54;5&#46;co&#46;n%&#55;A'>
