--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -6,8 +6,8 @@ bodyClass: help
 <nav class="section navbar py-0 bg-black">
   <div class="container mx-auto flex items-center gap-x-4">
     <a href="/"><img class="h-12" src="images/logo/tfs-white.svg" alt="The Finishing Suite" /></a>
-    <a href="/help/" class="text-right">Help Center</a>
-    <a href="/help/#contact" class="contact hidden sm:inline-block">Contact Us</a>
+    <a href="/help/" class="text-right">Help</a>
+    <a href="/help/#contact" class="contact hidden sm:inline-block">Contact</a>
   </div>
 </nav>
 
