--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,8 +1,12 @@
-<header class="header bg bg-reb">
+<header class="header">
+  {%- for image in headerImages -%}
+    <div class="header-bg bg {% if loop.first %}active{% endif %}" style="background-image: url(images/{{ image }})"></div>
+  {%- endfor -%}
+
   <div class="container mx-auto flex flex-col justify-center h-full">
 
     <h1 class="sr-only">The Finishing Suite</h1>
-    <img class="w-1/2 mx-auto" src="images/logo/tfs-white.svg" alt="The Finishing Suite" />
+    <img class="logo w-1/2 mx-auto" src="images/logo/tfs-white.svg" alt="The Finishing Suite" />
 
     <a class="text-4xl" href="https://www.instagram.com/thefinishingsuite" alt="Instagram - @thefinishingsuite" target="_blank">
       <i class="fab fa-instagram"></i>
