Fix help footer location for short content

--- a/resources/sass/components/_help.scss
+++ b/resources/sass/components/_help.scss
@@ -1,6 +1,18 @@
-.help {
+body.help {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
   background-color: theme('colors.white');
   color: theme('colors.black');
+
+  > .main {
+    flex: 1;
+  }
+
+  > .contact {
+    margin-top: auto;
+  }
 
   a {
     transition: color 300ms ease-in-out;
