--- a/site/includes/layouts/help/base.njk
+++ b/site/includes/layouts/help/base.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/default.njk
 bodyClass: help
+htmlClass: h-full
 ---
 
 <nav class="section navbar py-0 bg-black">
@@ -11,7 +12,7 @@ bodyClass: help
   </div>
 </nav>
 
-<section class="section py-0">
+<section class="section main py-0">
   <div class="container mx-auto help-content-container">
     {{ content | safe }}
   </div>
