--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="min-h-full antialiased">
+<html lang="en" class="antialiased {{htmlClass}}">
 
 <head>
   <meta charset="utf-8">
