--- a/site/index.njk
+++ b/site/index.njk
@@ -3,6 +3,7 @@ layout: default
 title: Boutique post-production in Ponsonby, Auckland
 meta_description: Boutique post-production in Ponsonby, Auckland
 bodyClass: bg-black text-white
+htmlClass: min-h-full
 ---
 
 {% include "components/header.njk" %}
