--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,11 +1,14 @@
 <section id="services" class="section services bg bg-texture">
   <div class="container mx-auto">
 
-    <h2>Services</h2>
+  <h2>Services</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
+  <div class="services-list">
 
-      <div class="">
+    <div class="services-list-inner">
+      <div class="services-slide-pre"></div>
+
+      <div class="services-slide">
         <h4>Motion picture finishing</h4>
         <ul>
           <li>Colour grading</li>
@@ -21,30 +24,28 @@
         </ul>
       </div>
 
-      <div>
-        <div class="">
-          <h4>Client services</h4>
-          <ul>
-            <li>High speed 1300 Mbps WiFi</li>
-            <li>Fibre optic internet connection</li>
-            <li>Fully stocked bar fridge</li>
-            <li>Food, drink, and concierge services available on request</li>
-          </ul>
-        </div>
-
-        <div class="mt-16 md:mt-8">
-          <h4>International services</h4>
-          <ul>
-            <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
-            <li>Remote colour grading</li>
-            <li>High Speed fibre optic data transfers</li>
-            <li>Rushes and DIT</li>
-            <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
-          </ul>
-        </div>
+      <div class="services-slide">
+        <h4>Client services</h4>
+        <ul>
+          <li>High speed 1300 Mbps WiFi</li>
+          <li>Fibre optic internet connection</li>
+          <li>Fully stocked bar fridge</li>
+          <li>Food, drink, and concierge services available on request</li>
+        </ul>
       </div>
 
-      <div class="">
+      <div class="services-slide">
+        <h4>International services</h4>
+        <ul>
+          <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
+          <li>Remote colour grading</li>
+          <li>High Speed fibre optic data transfers</li>
+          <li>Rushes and DIT</li>
+          <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
+        </ul>
+      </div>
+
+      <div class="services-slide">
         <h4>Dry hire</h4>
         <ul>
           <li>Client facing suite available for short and long term dry hire</li>
@@ -61,7 +62,19 @@
         </ul>
       </div>
 
+      <div class="services-slide-post"></div>
     </div>
 
+    <div class="services-list-indicators">
+      <div class="services-list-indicator active" data-slide="0"></div>
+      <div class="services-list-indicator" data-slide="0"></div>
+      <div class="services-list-indicator" data-slide="0"></div>
+      <div class="services-list-indicator" data-slide="0"></div>
+    </div>
+
+    <a class="services-list-prev" role="button"><i class="fas fa-chevron-left"></i></a>
+    <a class="services-list-next" role="button"><i class="fas fa-chevron-right"></i></a>
+
   </div>
+
 </section>
