--- a/resources/sass/components/_services.scss
+++ b/resources/sass/components/_services.scss
@@ -28,7 +28,9 @@
     overflow-x: hidden;
     overscroll-behavior-x: contain;
 
-    -webkit-mask-image: linear-gradient(to right, #0000, #000, #000, #0000);
+    @screen md {
+      -webkit-mask-image: linear-gradient(to right, #0000, #000, #000, #0000);
+    }
   }
 
   .services-list-slides-container {
@@ -49,11 +51,28 @@
 
   .services-slide-pre,
   .services-slide-post {
-    @apply w-1/4;
+    @apply w-0;
+
+    @screen md {
+      @apply w-1/4;
+    }
+
+    @screen lg {
+      @apply w-1/3;
+    }
   }
 
   .services-slide {
-    @apply w-1/2;
+    @apply w-full;
+
+    @screen md {
+      @apply w-1/2;
+      margin-right: 6rem;
+    }
+
+    @screen lg {
+      @apply w-1/3;
+    }
   }
 
   .services-list-indicators {
@@ -98,16 +117,12 @@
   }
 
   .services-list-prev {
-    left: 0;
+    left: -3rem;
+    //left: 0;
   }
 
   .services-list-next {
-    right: 0;
+    right: -3rem;
+    //right: 0;
   }
-
-  // .grid {
-  //   + .grid {
-  //     @apply mt-16;
-  //   }
-  // }
 }
