--- a/resources/sass/components/_services.scss
+++ b/resources/sass/components/_services.scss
@@ -1,4 +1,10 @@
 .section.services {
+
+  > .container {
+    @apply max-w-none;
+    @apply px-0;
+  }
+
   h2 {
     @apply mb-4;
   }
@@ -28,8 +34,10 @@
     overflow-x: hidden;
     overscroll-behavior-x: contain;
 
+    mask-image: linear-gradient(to right, #0000 0%, #000 15%, #000 85%, #0000 100%);
+
     @screen md {
-      -webkit-mask-image: linear-gradient(to right, #0000, #000, #000, #0000);
+      mask-image: linear-gradient(to right, #0000 0%, #000 25%, #000 75%, #0000 100%);
     }
   }
 
@@ -51,7 +59,7 @@
 
   .services-slide-pre,
   .services-slide-post {
-    @apply w-0;
+    width: 10vw;
 
     @screen md {
       @apply w-1/4;
@@ -63,7 +71,8 @@
   }
 
   .services-slide {
-    @apply w-full;
+    width: 80vw;
+    @apply px-3;
 
     @screen md {
       @apply w-1/2;
@@ -102,7 +111,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    width: 15%;
+    width: 10vw;
 
     display: flex;
     align-items: center;
@@ -114,15 +123,19 @@
     &:hover {
       opacity: 1;
     }
+
+    @screen md {
+      width: 15%;
+    }
   }
 
   .services-list-prev {
-    left: -3rem;
-    //left: 0;
+    //left: -3rem;
+    left: 0;
   }
 
   .services-list-next {
-    right: -3rem;
-    //right: 0;
+    //right: -3rem;
+    right: 0;
   }
 }
