--- a/resources/sass/components/_services.scss
+++ b/resources/sass/components/_services.scss
@@ -24,6 +24,12 @@
     }
   }
 
+  .services-swiper {
+    max-width: 75vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .services-list {
     position: relative;
   }
