--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -3,80 +3,77 @@
 
   <h2>Services</h2>
 
-  <div id="servicesInner" class="services-list">
+  <div class="services-swiper swiper">
+    <div class="swiper-wrapper">
 
-    <div class="services-list-inner">
-      <div id="servicesSlidesContainer" class="services-list-slides-container">
-        <div id="servicesSlidePre" class="services-slide-pre"></div>
-
-        <div class="services-slide active">
-          <h4>Motion picture finishing</h4>
-          <ul>
-            <li>Colour grading</li>
-            <li>VFX and motion graphics</li>
-            <li>Image restoration</li>
-            <li>Beauty and digital make-up</li>
-            <li>Title design</li>
-            <li>End credits</li>
-            <li>Mastering</li>
-            <li>DCP Authoring and theatrical QC</li>
-            <li>Subjective Broadcast QC checks</li>
-            <li>LTO8 data backup</li>
-          </ul>
-        </div>
-
-        <div class="services-slide">
-          <h4>Client services</h4>
-          <ul>
-            <li>High speed 1300 Mbps WiFi</li>
-            <li>Fibre optic internet connection</li>
-            <li>Fully stocked bar fridge</li>
-            <li>Food, drink, and concierge services available on request</li>
-          </ul>
-        </div>
-
-        <div class="services-slide">
-          <h4>International services</h4>
-          <ul>
-            <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
-            <li>Remote colour grading</li>
-            <li>High Speed fibre optic data transfers</li>
-            <li>Rushes and DIT</li>
-            <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
-          </ul>
-        </div>
-
-        <div class="services-slide">
-          <h4>Dry hire</h4>
-          <ul>
-            <li>Client facing suite available for short and long term dry hire</li>
-            <li>Configurable for both colour/finishing and offline editing</li>
-            <li>Sony OLED reference monitoring</li>
-            <li>LG 55" OLED client monitor</li>
-            <li>DaVinci Resolve Studio</li>
-            <li>Avid Media Composer</li>
-            <li>Adobe Creative Cloud</li>
-            <li>18TB direct attached Raid for near-archive</li>
-            <li>6TB direct attached SSD Raid for blistering fast cache</li>
-            <li>LTO8 deck</li>
-            <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
-          </ul>
-        </div>
-
-        <div class="services-slide-post"></div>
+      <div class="swiper-slide">
+        <h4>Motion picture finishing</h4>
+        <ul>
+          <li>Colour grading</li>
+          <li>VFX and motion graphics</li>
+          <li>Image restoration</li>
+          <li>Beauty and digital make-up</li>
+          <li>Title design</li>
+          <li>End credits</li>
+          <li>Mastering</li>
+          <li>DCP Authoring and theatrical QC</li>
+          <li>Subjective Broadcast QC checks</li>
+          <li>LTO8 data backup</li>
+        </ul>
       </div>
+
+      <div class="swiper-slide">
+        <h4>Client services</h4>
+        <ul>
+          <li>High speed 1300 Mbps WiFi</li>
+          <li>Fibre optic internet connection</li>
+          <li>Fully stocked bar fridge</li>
+          <li>Food, drink, and concierge services available on request</li>
+        </ul>
+      </div>
+
+      <div class="swiper-slide">
+        <h4>International services</h4>
+        <ul>
+          <li>Your US$ budget goes much further paying for post-production services in NZ$</li>
+          <li>Remote colour grading</li>
+          <li>High Speed fibre optic data transfers</li>
+          <li>Rushes and DIT</li>
+          <li>Talk to us about putting you in touch with some of New Zealand's best Line Producers</li>
+        </ul>
+      </div>
+
+      <div class="swiper-slide">
+        <h4>Dry hire</h4>
+        <ul>
+          <li>Client facing suite available for short and long term dry hire</li>
+          <li>Configurable for both colour/finishing and offline editing</li>
+          <li>Sony OLED reference monitoring</li>
+          <li>LG 55" OLED client monitor</li>
+          <li>DaVinci Resolve Studio</li>
+          <li>Avid Media Composer</li>
+          <li>Adobe Creative Cloud</li>
+          <li>18TB direct attached Raid for near-archive</li>
+          <li>6TB direct attached SSD Raid for blistering fast cache</li>
+          <li>LTO8 deck</li>
+          <li>All mounted in a tidy and mobile 16RU rack -- come work onsite or wheel it out the door to take on-set</li>
+        </ul>
+      </div>
+
+      <div class="swiper-slide">
+        <h4>Slide 5</h4>
+      </div>
+
+      <div class="swiper-slide">
+        <h4>Slide 6</h4>
+      </div>
+
     </div>
 
-    <div id="serviceListIndicators" class="services-list-indicators">
-      <div class="services-list-indicator active" data-target="#serviceListIndicators" data-slide="0"></div>
-      <div class="services-list-indicator" data-target="#serviceListIndicators" data-slide="1"></div>
-      <div class="services-list-indicator" data-target="#serviceListIndicators" data-slide="2"></div>
-      <div class="services-list-indicator" data-target="#serviceListIndicators" data-slide="3"></div>
-    </div>
+    <div class="swiper-pagination"></div>
 
-    <a class="services-list-prev" role="button"><i class="fas fa-chevron-left"></i></a>
-    <a class="services-list-next" role="button"><i class="fas fa-chevron-right"></i></a>
-
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
 
 </section>
