--- a/resources/sass/components/_services.scss
+++ b/resources/sass/components/_services.scss
@@ -25,123 +25,14 @@
   }
 
   .services-swiper {
-    max-width: 75vw;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    // max-width: 75vw;
+    // margin-left: auto;
+    // margin-right: auto;
+    @apply pb-10;
 
-  .services-list {
-    position: relative;
-  }
-
-  .services-list-inner {
-    position: relative;
-
-    overflow-x: hidden;
-    overscroll-behavior-x: contain;
-
-    mask-image: linear-gradient(to right, #0000 0%, #000 15%, #000 85%, #0000 100%);
-
-    @screen md {
-      mask-image: linear-gradient(to right, #0000 0%, #000 25%, #000 75%, #0000 100%);
+    .swiper-slide {
+      @apply px-12;
     }
   }
 
-  .services-list-slides-container {
-    position: relative;
-    left: 0;
-
-    display: flex;
-    flex-direction: row;
-
-    transition: 0.5s ease;
-  }
-
-  .services-slide,
-  .services-slide-pre,
-  .services-slide-post {
-    flex-shrink: 0;
-  }
-
-  .services-slide-pre,
-  .services-slide-post {
-    width: 10vw;
-
-    @screen md {
-      @apply w-1/4;
-    }
-
-    @screen lg {
-      @apply w-1/3;
-    }
-  }
-
-  .services-slide {
-    width: 80vw;
-    @apply px-3;
-
-    @screen md {
-      @apply w-1/2;
-      margin-right: 6rem;
-    }
-
-    @screen lg {
-      @apply w-1/3;
-    }
-  }
-
-  .services-list-indicators {
-    display: flex;
-
-    gap: 6px;
-    justify-content: center;
-  }
-
-  .services-list-indicator {
-    @apply mt-6;
-
-    width: 3rem;
-    height: .3rem;
-
-    background-color: #fff;
-    border-radius: 1.5rem;
-    opacity: .5;
-
-    &.active {
-      opacity: 1;
-    }
-  }
-
-  .services-list-prev,
-  .services-list-next {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 10vw;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    opacity: .5;
-    text-align: center;
-
-    &:hover {
-      opacity: 1;
-    }
-
-    @screen md {
-      width: 15%;
-    }
-  }
-
-  .services-list-prev {
-    //left: -3rem;
-    left: 0;
-  }
-
-  .services-list-next {
-    //right: -3rem;
-    right: 0;
-  }
 }
