--- a/resources/sass/components/_services.scss
+++ b/resources/sass/components/_services.scss
@@ -28,10 +28,23 @@
     // max-width: 75vw;
     // margin-left: auto;
     // margin-right: auto;
+
+    max-width: 600px;
+
     @apply pb-10;
+
+    @screen md {
+      max-width: 90vw;
+    }
 
     .swiper-slide {
       @apply px-12;
+    }
+
+    .slide-content {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 300px;
     }
   }
 
