--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -70,20 +70,29 @@
 
       <div class="swiper-slide">
         <div class="slide-content">
-          <h4>Slide 5</h4>
+          <h4>AI/Machine Learning</h4>
           <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
+            <li>Next-gen denoising</li>
+            <li>Super slow-motion frame interpolation</li>
+            <li>VO overdubs with custom voice models</li>
+            <li>Upscaling</li>
+            <li>Deinterlacing</li>
+            <li>Transcription</li>
+            <li>Audio clean-up and voice isolation</li>
           </ul>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="slide-content">
-          <h4>Slide 6</h4>
+          <h4>VFX</h4>
           <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
+            <li>Specialising in invisible VFX</li>
+            <li>Paint outs</li>
+            <li>Set clean ups and extensions</li>
+            <li>Logo replacements</li>
+            <li>Screen inserts</li>
+            <li>Sky replacements</li>
           </ul>
         </div>
       </div>
